	  checks.
	* Limit number of results to commit at the same time (default 50).
	  Configration value is 'limit_commit'.
	* Allow to limit plugins to several groups.
	* Save history only when job is finished and new status differs from
	  previously saved status.
	* Overhaul logging in BaseJob and BasePlugin to reduce file descriptor
	  usage and fix "broken" log output, closes: #3057.

Version 0.7.0 Released on 2010/04/21

	* Added error message if plugin imports fail in the configuration parser, closes: #2820.
	* Changed 'logfile' parameter to 'logdir' since spvd uses multiple log files, refs: #2843.
	* Changed API to be more concise and flexible, refs: #2900.
	* Fixed log output in --no-daemon mode, closes: #2843.
	* Check for txt2tags and sed in configure.
	* Fix SQL schema (SQL syntax errors, missing permission queries)
	* Prevent spvd from quitting if no plugins are configured.
	* Fixed wrong permission on log file, closes: #2085.
	* Fixed use of unitialized class member 'name', closes: #2986.
	* Using new webengine-spv get_checks parameter :  get_detailed_infos.
	* Retreive status_infos to let jobs access them.
	* Fix outdated plugin instrospection for checklists, closes: #2985.
	* Moved some logs to debug level.
	* Changed default log line format to be more verbose.
	* data: Removed useless SQL functions.
	* Stop using deprecated webengine-spv 'spv' APIs, migrate to 'spv.services'.
	* Add history support in BaseJob class, closes: #3038.
	* Add documentation for general plugin/job configuration.
	* data: add triggers needed for new webengine-spv management functions,
	  closes: #3072.
	* data: sync some column definition with (pre)prod.
	* data: Add 'repeat_on_error' column in the 'checks' table, refs: #3035.
	* Do not erase plugin defined name attribute, refs: #2986.
	* Cast history timestamp part of the key to an integer.
	* data: add missing migration from pre 0.6 supervision and add missing
	  bits to 0.7 migration.

Version 0.6.2 Released on 2010/01/27
