@@ -1,15 +1,15 @@
+""" Sample module """
+
 from baseplugin import BasePlugin
 from basejob import BaseJob
 import time
 
-PLUGIN_NAME = "sample"
-
 class Job(BaseJob):
     """ Sample job. """
 
-    def __init__(self, log_dir, log_name, log_level, infos):
+    def __init__(self, options, infos, params):
         """ Init method of sample job. """
-        BaseJob.__init__(self, log_dir, log_name, log_level, infos)
+        BaseJob.__init__(self, options, infos, params)
 
     # This method isn't called directly by a check but by another method inside
     # the plugin : its name MUST start with '_'.
@@ -35,6 +35,9 @@ class Job(BaseJob):
 class Plugin(BasePlugin):
     """ Sample plugin. """
 
+    # Name of the plugin. Mandatory
+    name = "sample"
+
     # This dict defines the mandatory options to be configured to use this plugin.
     # Its form is : require = { 'option1_name' : option1_type, ... }
     require = { }
@@ -43,10 +46,9 @@ class Plugin(BasePlugin):
     # Its form is : optional = {'option1_name' : option1_type, ... }
     optional = { }
 
-    def __init__(self, log_dir, log_name, log_level, event, url=None, params=None):
-        """ Init method of sample plugin. """
-        BasePlugin.__init__(self, PLUGIN_NAME, log_dir, log_name, log_level, event, url, params)
+    def __init__(self, options, event, url=None, params=None):
+        BasePlugin.__init__(self, options, event, url, params)
 
     def create_new_job(self, job):
         """ Create a new sample job. """
-        return Job(self.log_dir, self.log_name, self.log_level, job)
+        return Job(self.options, job, self.params)
