@@ -10,6 +10,8 @@ Version 0.8.0 Released on 2010/05/12
 	  previously saved status.
 	* Overhaul logging in BaseJob and BasePlugin to reduce file descriptor
 	  usage and fix "broken" log output, closes: #3057.
+	previously saved status.
+	* Fix sample plugin API out of date, closes: #2984.
 
 Version 0.7.0 Released on 2010/04/21
 
